grafpromingressservices.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  #annotations:
   # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: graf.kub
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: graf
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  #annotations:
   # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: prom.kub
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prom
            port: 
              number: 9090
