ingressgraf.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: graf.kub
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: graf
                port:
                  number: 80
