ingressprom.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: prom.kub
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prom
                port:
                  number: 9090
